# edw_catapult

./: CreateDataSource.py  LICENSE  README.md  intial_token.txt  notes.txt  setup.cfg
Example Code/: CreateDataSource.py  FIle Rename Test.py  TestEmail.py  secondconnectiontest.py  testconnection.py
src/edw_catapult/: main.py
src/edw_catapult/FrameworkObject/: Database.py
src/edw_catapult_falcon00.egg-info/: PKG-INFO  SOURCES.txt
