[metadata]
name = edw-catapult-falcon00
version = 0.0.1
author = Bob Wakefield
author_email = bob@MassStreet.net
description = A POC for EDW Catapult
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MassStreetAnalytics/edw-catapult
project_urls =
    Bug Tracker = https://github.com/MassStreetAnalytics/edw-catapult/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src